# Timelord

./: README.md  extract  extract.cpp
hpec2023/: CMakeLists.txt  hpccg-1.0_2023_07_15__04_59_31.yaml  hpccg-1.0_2023_07_15__04_59_44.yaml  hpccg-1.0_2023_07_15__04_59_49.yaml  hpccg-1.0_2023_07_15__04_59_57.yaml  hpccg-1.0_2023_07_15__05_00_02.yaml  hpccg-1.0_2023_07_15__05_00_14.yaml  hpccg-1.0_2023_07_15__05_00_39.yaml  hpccg-1.0_2023_07_15__05_00_51.yaml  hpccg-1.0_2023_07_15__05_01_04.yaml  hpccg-1.0_2023_07_15__05_12_48.yaml  hpccg-1.0_2023_07_15__05_13_02.yaml  hpccg-1.0_2023_07_15__05_13_10.yaml  hpccg-1.0_2023_07_15__05_13_15.yaml  hpccg-1.0_2023_07_15__05_13_23.yaml  hpccg-1.0_2023_07_15__05_13_36.yaml  hpccg-1.0_2023_07_15__05_14_17.yaml  hpccg-1.0_2023_07_15__05_14_30.yaml  hpccg-1.0_2023_07_15__05_14_43.yaml  hpccg-1.0_2023_07_15__05_41_09.yaml  hpccg-1.0_2023_07_15__05_41_23.yaml  hpccg-1.0_2023_07_15__05_41_37.yaml  hpccg-1.0_2023_07_15__05_41_50.yaml  hpccg-1.0_2023_07_15__05_42_22.yaml  hpccg-1.0_2023_07_15__05_42_41.yaml  hpccg-1.0_2023_07_15__05_43_01.yaml  hpl_baseline_1536.sh  hpl_baseline_3072.sh  hpl_baseline_768.sh  hpl_only.sh  hpl_tl_1536.sh  hpl_tl_3072.sh  hpl_tl_768.sh  lammps_baseline_1536.sh  lammps_baseline_3072.sh  lammps_baseline_768.sh  lammps_tl_1536.sh  lammps_tl_3072.sh  lammps_tl_768.sh  log.lammps  (+59 more)
hpec2023/cleanup/: hpccg_mpi_1536_baseline.sh  hpccg_mpi_1536_baseline_ew.sh  hpccg_mpi_1536_baseline_yield.sh  hpccg_mpi_1536_baseline_yield_ew.sh  hpcg_mpi_1536.sh  hpcg_mpi_3072.sh  hpcg_mpi_512.sh  lammps_baseline_3072.sh  (+23 more)
(+1280 files in other folders)
